# pyrene-dimer-analyzer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Et_rdkit_conformers.csv  GITHUB_CLUSTER_RUNBOOK.md  LICENSE  MANIFEST.in  NEXT_CHAT_HANDOFF_PROMPT.md  README.md  all_dimers_original_analysis.csv  all_molecules_catalog.csv  analysis_results.csv  analyze_moe_results.py  binaph_H_dimer_FIX1.mol  binaph_H_dimer_FIX1.sdf  binaph_H_dimer_FIX1.smi  binaph_H_dimer_FIX1_3D.sdf  binaph_H_dimer_FIX1_3D_noH.sdf  binaph_H_dimer_FIX3.mol  binaph_H_dimer_FIX3.smi  binaph_H_dimer_FIX3_3D.sdf  binaph_H_dimer_FIX3_3D_noH.sdf  binaph_H_dimer_OLD.mol  binaph_H_dimer_OLD.smi  binaph_H_dimer_OLD_3D.sdf  binaph_H_dimer_OLD_3D_noH.sdf  binaph_dimer_smiles.csv  build_binaph_dimer.py  build_binaph_library.py  build_binaph_monomer.py  build_binaphthalene.py  build_correct_monomer.py  build_corrected_dimer_v2.py  build_dimer_library.py  cHex_rdkit_conformers.csv  compare_methods.py  corrected_dimer_smiles.csv  decimer_crop_ocr.py  decimer_ocr.py  dimer_et_conformers.sdf  (+26 more)
.github/workflows/: docs.yml  tests.yml
docs/: COMPUTE_EXECUTION_PLAN.md  MOE_BATCH_GUIDE.md  ORCA_EXCITED_STATE_WORKFLOW.md  PROJECT_PLAN.md  api_reference.md  index.md  installation.md  installation_xtb.md  quickstart.md  references.bib  scientific_background.md
docs/examples/: basic_analysis.md  batch_processing.md  qsar_workflow.md
docs/scientific-analysis/: QUICK_ACTION_ITEMS.md  README.md  SCIENTIFIC_VALIDATION_AND_IMPROVEMENT_PLAN.md  ethynylpyrene_excimer_literature_review.md  mace_validation.md
examples/: analyze_single_molecule.py  batch_analysis.py  generate_plots.py
experiments/: optimize_conformers.py
moe_conformers/: binaph_H_dimer_conformers_V3000.sdf  cnph_th_cf3_moe_analysis.csv
moe_import/: CNPh_Th_CF3_3D.sdf  CNPh_Th_CN_3D.sdf  CNPh_Th_Cl_3D.sdf  CNPh_Th_Et_3D.sdf  CNPh_Th_F_3D.sdf  CNPh_Th_H_3D.sdf  CNPh_Th_MeO_3D.sdf  CNPh_Th_Me_3D.sdf  CNPh_Th_NMe2_3D.sdf  CNPh_Th_OEt_3D.sdf  CNPh_Th_Ph_3D.sdf  CNPh_Th_cHex_3D.sdf  CNPh_Th_iPr_3D.sdf  CNPh_Th_nBu_3D.sdf  CNPh_Th_nPr_3D.sdf  CNPh_Th_tBu_3D.sdf  DCV_Th_CF3_3D.sdf  DCV_Th_CN_3D.sdf  DCV_Th_Cl_3D.sdf  DCV_Th_Et_3D.sdf  DCV_Th_F_3D.sdf  DCV_Th_H_3D.sdf  DCV_Th_MeO_3D.sdf  DCV_Th_Me_3D.sdf  DCV_Th_NMe2_3D.sdf  DCV_Th_OEt_3D.sdf  DCV_Th_Ph_3D.sdf  DCV_Th_cHex_3D.sdf  DCV_Th_iPr_3D.sdf  DCV_Th_nBu_3D.sdf  DCV_Th_nPr_3D.sdf  DCV_Th_tBu_3D.sdf  EtynPyr_CF3_3D.sdf  EtynPyr_CN_3D.sdf  EtynPyr_Cl_3D.sdf  EtynPyr_Et_3D.sdf  EtynPyr_F_3D.sdf  EtynPyr_H_3D.sdf  EtynPyr_MeO_3D.sdf  EtynPyr_Me_3D.sdf  (+24 more)
notebooks/: 01_basic_analysis.ipynb  02_batch_processing.ipynb  03_advanced_visualization.ipynb
orca_templates/: esd_abs.inp.tpl  esd_fluor.inp.tpl  s0_opt_freq.inp.tpl  s1_opt.inp.tpl  vertical_abs.inp.tpl
pyrene_analyzer/: __init__.py  aromatic_systems.py  cli.py  core.py  ensemble.py  geometry.py  io.py  mace_optimizer.py  screening.py  substituent_params.py  visualization.py  xtb_optimizer.py
scripts/: cluster_preflight.sh  merge_reopt_chunks.py  orca_collect_results.py  orca_prepare_inputs.py  orca_run_queue.py  orca_select_candidates.py  run_dual_gpu_reopt.sh  run_orca_next_steps.sh
tests/: __init__.py  conftest.py  test_aromatic_systems.py  test_cli.py  test_core.py  test_ensemble.py  test_geometry.py  test_io.py  test_mace_optimizer.py  test_orca_workflow_scripts.py  test_screening.py  test_validate_mace.py  test_visualization.py
tests/test_data/: pyrene_dimer_set_for_MOE.sdf
