[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrene-dimer-analyzer"
version = "1.1.0"
description = "Automated geometric analysis of aromatic dimer conformers"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Research Team, UCT Prague", email = "research@vscht.cz"}
]
maintainers = [
    {name = "Research Team, UCT Prague", email = "research@vscht.cz"}
]
keywords = [
    "pyrene",
    "perylene",
    "anthracene",
    "naphthalene",
    "phenanthrene",
    "aromatic dimer",
    "excimer",
    "conformational analysis",
    "molecular geometry",
    "rdkit",
    "cheminformatics",
    "computational chemistry",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "rdkit>=2023.9.1",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "shapely>=2.0.0",
    "click>=8.1.0",
    "tqdm>=4.65.0",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "isort>=5.12.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "nbconvert>=7.0.0",
    "ipywidgets>=8.0.0",
]
mace = [
    "mace-torch>=0.3.0",
    "ase>=3.22.0",
    "torch>=2.0.0",
]
all = [
    "pyrene-dimer-analyzer[dev,docs,notebooks]",
]

[project.scripts]
pyrene-analyze = "pyrene_analyzer.cli:main"

[project.urls]
Homepage = "https://github.com/research-team/pyrene-dimer-analyzer"
Documentation = "https://pyrene-dimer-analyzer.readthedocs.io/"
Repository = "https://github.com/research-team/pyrene-dimer-analyzer"
"Bug Tracker" = "https://github.com/research-team/pyrene-dimer-analyzer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyrene_analyzer*"]
exclude = ["tests*", "docs*", "examples*", "notebooks*"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "docs/",
    "examples/",
    "notebooks/",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=pyrene_analyzer --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["pyrene_analyzer"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
